# zephyr-webserver

./: .clang-format  .clang-format-ignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  http_iterables.ld  prj.conf
app/frontend/: .eslintignore  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
app/frontend/src/: index.jsx  style.css
app/frontend/src/components/: Header.jsx
app/frontend/src/pages/: home.jsx
app/src/: main.c  static_resources.c
drivers/: Kconfig
lib/: Kconfig
